@@ -34,7 +34,10 @@ Development Version
 ===================
 
 HEAD
-    - BUGFIX: Fixed issue for GoogleAppEngine (GAE) which somehow handles codecs differently. ``parseUrl`` should work now.
+    - FEATURE: ``parseStyle()`` has optional parameter ``validate=False`` now too to disable validation of properties (default is always ``True``).
+
+    + BUGFIX: Fixed issue for GoogleAppEngine (GAE) which somehow handles codecs differently. ``parseUrl`` should work now.
+
 
 0.9.8
 -----
